--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,10 @@
+:root {
+  --bg-color: #f5f5f5;
+  --dark-color: #3d3c38;
+  --accent-color: #fcba03;
+  --bright-color: #fff;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -6,9 +13,113 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--bg-color);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.DebugTitle {
+	display: none;
+}
+
+.Sidebar {
+	height: 100%;
+	width: 100px;
+	position: fixed;
+	z-index: 2;
+  	top: 0;
+  	left: 0;
+	overflow-x: hidden;
+	background-color: var(--dark-color);
+	color: var(--accent-color);
+	box-shadow: 1px 1px 3px grey;
+	padding-top: 5px;
+}
+.NavButton button{
+	margin-top: 8px;
+	font-size: 17px;
+	height: 40px;
+	background-color: inherit;
+	border-radius: 4px;
+	border-width: 0px;
+	letter-spacing: 2px;
+	border-color: inherit;
+	color: inherit;
+}
+.Search input {
+	margin-top: 16px;
+	font-size: 17px;
+	height: 20px;
+	background-color: inherit;
+	border-color: inherit;
+	border-style: solid;
+	border-radius: 4px;
+	color: inherit;
+}
+
+.Content {
+	margin-left: 100px;
+	height: 100%;
+}
+
+.CourseList {
+	margin-left: 200px;
+	height: 100%;
+	padding: 10px;
+}
+
+.CoursePreview {
+	margin: 10px;
+	border-radius: 4px;
+	background-color: var(--bright-color);
+	display: flex;
+	height: 150px;
+}
+
+.CoursePreview .img {
+	margin: auto;
+	width: 100px;
+	color: var(--accent-color);
+}
+
+.CoursePreview .img img {
+	width: 100px;
+}
+
+.CoursePreview .desc {
+	margin: auto;
+	text-align: left;
+	color: var(--dark-color);
+}
+
+.CoursePreview .desc .title h1 {
+	font-size: 18px;
+}
+
+.CoursePreview .desc .title:hover {
+	text-decoration: underline;
+}
+
+.CoursePreview .bounty {
+	margin: auto;
+	width: 100px;
+	color: var(--accent-color);
+}
+
+
+.Filterbar {
+	height: 100%;
+	width: 200px;
+	position: fixed;
+	z-index: 1;
+  	top: 0;
+	overflow-x: hidden;
+	background-color: var(--bright-color);
+	color: var(--dark-color);
+	box-shadow: 1px 1px 3px grey;
+
+	padding-top: 5px;
 }
