--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,7 @@
   --dark-color: #3d3c38;
   --accent-color: #fcba03;
   --bright-color: #fff;
+  --topbar-height: 55px;
 }
 
 body {
@@ -25,18 +26,23 @@ code {
 	display: none;
 }
 
-.Sidebar {
-	height: 100%;
-	width: 100px;
+.Topbar {
+	height: var(--topbar-height);
+	width: 100%;
 	position: fixed;
 	z-index: 2;
   	top: 0;
   	left: 0;
-	overflow-x: hidden;
+	overflow-y: hidden;
 	background-color: var(--dark-color);
 	color: var(--accent-color);
 	box-shadow: 1px 1px 3px grey;
-	padding-top: 5px;
+	padding-left: 10px;
+}
+.Topbar .NavButton {
+	float: left;
+	margin-top: auto;
+	margin-left: 10px;
 }
 .NavButton button{
 	margin-top: 8px;
@@ -57,14 +63,28 @@ code {
 	border-color: inherit;
 	border-style: solid;
 	border-radius: 4px;
+	border-width: 1px;
 	color: inherit;
 }
 
 .Content {
-	margin-left: 100px;
+	overflow-x: hidden;
+    overflow-x: auto; 
+	margin-top: var(--topbar-height);
 	height: 100%;
 }
 
+.Filterbar {
+	height: 100%;
+	width: 200px;
+	position: fixed;
+	z-index: 1;
+	overflow-x: hidden;
+	background-color: var(--bright-color);
+	color: var(--dark-color);
+
+	padding-top: 5px;
+}
 .CourseList {
 	margin-left: 200px;
 	height: 100%;
@@ -107,19 +127,4 @@ code {
 	margin: auto;
 	width: 100px;
 	color: var(--accent-color);
-}
-
-
-.Filterbar {
-	height: 100%;
-	width: 200px;
-	position: fixed;
-	z-index: 1;
-  	top: 0;
-	overflow-x: hidden;
-	background-color: var(--bright-color);
-	color: var(--dark-color);
-	box-shadow: 1px 1px 3px grey;
-
-	padding-top: 5px;
 }
